[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ralph-codes"
version = "1.0.0"
description = "Ralph Codes 4 OpenCode - A GUI for managing AI coding tasks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Ralph Development Team"}
]
keywords = ["ai", "coding", "assistant", "opencode", "gui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
ralph = "ralph_gui:main"

[project.urls]
Homepage = "https://github.com/ralph-codes/ralph"
Repository = "https://github.com/ralph-codes/ralph"
Issues = "https://github.com/ralph-codes/ralph/issues"

[tool.setuptools]
packages = ["ralph_codes"]
package-dir = {"ralph_codes" = "."}
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.jpg", "*.png", "*.cmd", "*.sh", "*.ini"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
